<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <EditText
        android:padding="5dp"
        android:background="@drawable/edittext"
        android:id="@+id/et_nombre"
        android:hint="@string/r_hint_01"
        android:layout_width="200dp"
        android:layout_height="wrap_content">

    </EditText>

    <EditText
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:background="@drawable/edittext"
        android:id="@+id/et_apellido"
        android:hint="@string/r_hint_02"
        android:layout_width="200dp"
        android:layout_height="wrap_content">

    </EditText>
    <EditText
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:background="@drawable/edittext"
        android:id="@+id/et_cedula"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/r_hint_03">

    </EditText>
    <Spinner

        android:layout_marginTop="10dp"
        android:id="@+id/spiner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Spinner>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:text="@string/r_tv_pregunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>


    </LinearLayout>
    <CheckBox

        android:id="@+id/ch_bool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </CheckBox>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"

        app:backgroundTint="@color/colorgreen"
        app:srcCompat="@drawable/ic_arrow"
        tools:ignore="MissingConstraints" />



</LinearLayout>